Fixed: some spacings and positioning

--- a/src/components/zombie-game/GameSection.module.scss
+++ b/src/components/zombie-game/GameSection.module.scss
@@ -1,7 +1,7 @@
 @import "../../assets/scss/mixins";
 
 .container {
-  padding-top: 200px;
+  padding-top: 150px;
   position: relative;
   .subcontainer-info {
     display: flex;
