--- a/src/components/zombie-game/ZombieGame.module.scss
+++ b/src/components/zombie-game/ZombieGame.module.scss
@@ -33,6 +33,7 @@
 }
 .grid {
   display: grid;
+  align-items: center;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1;
   // grid-template-rows: 600px;
